Phone state z-index fix

--- a/app/assets/sass/partials/_sidebar.scss
+++ b/app/assets/sass/partials/_sidebar.scss
@@ -2,6 +2,7 @@ body.dashboard {
 	.sidebar {
 		height: 100%;
 		position: fixed;
+		z-index: 998;
 		width: $sidebar-normal-width;
 		background: $sidebar-background-color;
 		transition: margin $sidebar-transition-speed;
